[metadata]
name = pyramid_log
description = Include pyramid request attributes in your log messages
long_description = file: README.rst, CHANGES.rst
long_description_content_type = text/x-rst
url = http://pypi.python.org/pypi/pyramid_log/
author = Jeff Dairiki
author_email = dairiki@dairiki.org
keywords = pyramid logging
license = BSD
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Framework :: Pyramid
    Topic :: Internet :: WWW/HTTP
    Topic :: System :: Logging
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = pyramid_log
install_requires =
    pyramid
setup_requires =
    setuptools >= 40
    setuptools_scm

[bdist_wheel]
universal = 1
